test/libsolidity/syntaxTests/pragma/invalid_pragma.sol
pragma 0;
// ----
// SyntaxError 5226: (0-9='pragma 0;'): Invalid pragma "0"
